cluster/apps/disconnect/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disconnect-2022
  namespace: disconnect
  labels:
    app: disconnect-2022
spec:
  replicas: 2
  selector:
    matchLabels:
      app: disconnect-2022
  template:
    metadata:
      labels:
        app: disconnect-2022
    spec:
      containers:
        - name: disconnect_2022
          image: ghcr.io/paulkiernan/disconnect_2022:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: dockerconfigjson-github-com
