cluster/apps/disconnect/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: disconnect-2022
  namespace: disconnect
spec:
  selector:
    app: disconnect-2022
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
