cluster/apps/disconnect/ingress-2023.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disconnect-2023
  namespace: disconnect
  labels:
    kubernetes.io/ingress.class: traefik
  annotations:
    hajimari.io/appName: "disconnect-2023"
    hajimari.io/enable: "true"
    hajimari.io/icon: "account-network"
spec:
  rules:
    - host: "disconnect-2023.paulynomial.com"
      http:
        paths:
          - backend:
              service:
                name: disconnect-2023
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: "disconnect-2023.home.lab"
      http:
        paths:
          - backend:
              service:
                name: disconnect-2023
                port:
                  name: http
            path: /
            pathType: Prefix
